# fortran-gl-showcase

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TECHNICAL_PAPER.md  THIRD_PARTY.md  build.sh  fortran_gl_showcase_codex_prompts.md  install_deps.sh  run.sh
.github/workflows/: ci.yml
assets/shaders/: array_landscape.frag  color_field.frag  fractal2d.frag  fractal2d.vert  hdr_bloom_demo.frag  particles_draw.frag  particles_draw.vert  particles_step.comp  procedural_waves.frag  raymarch.frag  tunnel_flythrough.frag
assets/timelines/: combined.tl  demo.tl
docs/: ANIMATION.md  FRACTALS_2D.md  FRACTALS_3D.md  FUTURE_SCENE_IDEAS.md  PARTICLES.md  POSTPROCESS.md  SHADER_ART.md
scripts/: build.sh  check_gpu.sh  encode.sh  encode_gif.sh  install_deps.sh  render_gallery.sh
src/: main.f90
src/anim/: camera_spline.f90  keyframe_track.f90  timeline.f90  tiny_parser.f90
src/app/: app.f90  app_runtime.f90
src/core/: frame_export.f90  kinds.f90  logger.f90  logger_impl.f90  text_file.f90  timing.f90
src/gl/: gl_debug.f90  gl_loader.f90
src/platform/: input.f90  window.f90
src/render/: font_data.f90  fullscreen_quad.f90  menu_background.f90  palette_data.f90  post_process.f90  shader.f90  text_renderer.f90
src/scene/: coming_soon_scene.f90  empty_scene.f90  menu_scene.f90  scene_anim_test.f90  scene_array_landscape.f90  scene_base.f90  scene_combined.f90  scene_fractal2d.f90  scene_mandelbulb.f90  scene_particles.f90  scene_registry.f90  scene_shader_art.f90
tools/: gen_font.py  gen_palettes.py
